exo2, readme a creer

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: anastruc <anastruc@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/07 12:53:29 by anastruc          #+#    #+#              #
-#    Updated: 2025/03/31 13:51:10 by anastruc         ###   ########.fr        #
+#    Updated: 2025/04/08 15:36:05 by anastruc         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = easy_functions_template
+NAME = MutantStack
 COMPIL = c++
 FLAGS =  -Wall -Werror -Wextra -std=c++98 -g3 -fPIC
 
@@ -18,7 +18,7 @@ PINK = \033[1;35m
 BLUE = \033[1;36m
 NC = \033[0m
 
-HEADER = function_templates.hpp \
+HEADER =  \
 
 
  
@@ -40,16 +40,16 @@ objs/%.o: srcs/%.cpp $(PHEADERS)
 
 $(NAME) : $(OBJS)
 		@$(COMPIL) $(FLAGS) -o $@ $(OBJS)
-		@echo "$(BLUE)\n  easy_functions_template COMPILED \n$(NC) "
+		@echo "$(BLUE)\n  MutantStack COMPILED \n$(NC) "
 
 
 clean :
 	@rm -rf objs
-	@echo  "$(BLUE)\n  easy_functions_template CLEANED \n$(NC)"
+	@echo  "$(BLUE)\n  MutantStack CLEANED \n$(NC)"
 
 fclean : clean
 	@rm -rf $(NAME)
-	@echo  "$(BLUE)\n  easy_functions_template FULLY CLEANED \n$(NC)"
+	@echo  "$(BLUE)\n  MutantStack FULLY CLEANED \n$(NC)"
 
 leak :
 	@valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes --track-fds=yes ./$(NAME)
